Fixed navbar on mobile

--- a/potpourris/style.css
+++ b/potpourris/style.css
@@ -247,3 +247,15 @@ button {
 	cursor: pointer;
 	outline: inherit;
 }
+
+.toggler.navbar-toggler .navbar-toggler-icon {
+  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(255, 0, 0, 1)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
+}
+
+.toggler.navbar-toggler {
+  border-color: white;
+}
+
+.toggler.navbar-toggler:focus {
+  outline-color: white;
+}
